--- a/cal.html
+++ b/cal.html
@@ -204,14 +204,13 @@ object-fit: cover;
 		}	
         }
     </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4547897550281334"
-     crossorigin="anonymous"></script>
+
 </head>
 
 <body>
     <header class="header">
-<img src="logo.jpg" alt="Logo de la empresa" href="https://www.morysan.com.mx/?gad_source=1&gclid=CjwKCAjwoPOwBhAeEiwAJuXRh7C7CNODjjQCHC4TONcgeg68Y9S8O1kUghLXMz9mTBxZTgqy1shCcBoCv5wQAvD_BwE">
-        <h3>CALIDAD</h3> 
+<a href="https://www.morysan.com.mx/?gad_source=1&gclid=CjwKCAjwoPOwBhAeEiwAJuXRh7C7CNODjjQCHC4TONcgeg68Y9S8O1kUghLXMz9mTBxZTgqy1shCcBoCv5wQAvD_BwE" target="_blank"><img alt="LOGO" src="img/logo.jpg" width=48 height=48 /></a>       
+ <h3>CALIDAD</h3> 
 
 
     <div class="header">
